# Chapter14

./: Dockerfile  Dockerfile.Ubuntu18.04  Dockerfile.Ubuntu20.04  Dockerfile.debian  Dockerfile.vnc  Makefile  README.md  README.virtualbox  Setup.Ubuntu20.04  dockerbash.sh  dockerit.sh  dockertest.sh  dockervnc.sh
HybridMPIPlusOpenMP/: CMakeLists.txt  CartExchange.cc  place_report_mpi_omp.c
MPI/: place_report_mpi.c
OpenMP/: CMakeLists.txt  OpenMP_Affinity.py  place_report_omp.c  place_report_omp.h  run.out  run.sh  vecadd.c  vecadd_opt3.c
Quo/: Makefile  autobind.c  build_libquo.sh  dynaffinity.c  place_report.h
StreamTriad/: CMakeLists.txt  place_report_mpi_omp.c  place_report_mpi_omp.h  run.sh
hwloc/: place_report_mpi.h
